--- a/app/Resources/views/User/CabinetBase.html.twig
+++ b/app/Resources/views/User/CabinetBase.html.twig
@@ -25,7 +25,9 @@
                             </div>
                         </div>
                     </div>
-                    {% block cabinet_page %}
+                    {% block wishlist %}
+                    {% endblock %}
+                    {% block cart %}
                     {% endblock %}
                 </div>
             </div>
