--- a/app/Resources/views/User/Wishlist.html.twig
+++ b/app/Resources/views/User/Wishlist.html.twig
@@ -1,6 +1,6 @@
 {% extends 'User/CabinetBase.html.twig' %}
 {% set pageTitle = 'My Wishlist' %}
-{% block cabinet_page %}
+{% block wishlist %}
     <div class="table-responsive">
         {% if wishlist != null %}
             <table class="cart-table">
