--- a/app/Resources/views/User/Cart.html.twig
+++ b/app/Resources/views/User/Cart.html.twig
@@ -1,4 +1,5 @@
 {% extends 'User/CabinetBase.html.twig' %}
 
 {% block child_content %}
+    {% include 'Cart/cart.html.twig' with {'cart': cart} %}
 {% endblock %}
