Some refactoring of cart controller.

--- a/app/Resources/views/User/CabinetBase.html.twig
+++ b/app/Resources/views/User/CabinetBase.html.twig
@@ -12,7 +12,7 @@
                             <ul>
                                 <li><a href="{{ path('app_usercabinet_cabinet_showwishlist') }}">My Wishlist</a></li>
                                 <li><a href="">My Cart</a></li>
-                                <li><a href="">My Shipping Profiles</a></li>
+                                <li><a href="{{ path('app_usercabinet_cabinet_showshippings') }}">My Shipping Profiles</a></li>
                             </ul>
                         </div>
                     </aside>
@@ -28,6 +28,8 @@
                     {% block wishlist %}
                     {% endblock %}
                     {% block cart %}
+                    {% endblock %}
+                    {% block shippings%}
                     {% endblock %}
                 </div>
             </div>
