--- a/app/Resources/views/User/Shippings.html.twig
+++ b/app/Resources/views/User/Shippings.html.twig
@@ -1,4 +1,86 @@
 {% extends 'User/CabinetBase.html.twig' %}
 {% set pageTitle = 'My Shipping Profiles' %}
+
+{% block css  %}
+    {{ parent() }}
+    <link type="text/css" rel="stylesheet" href="{{ asset('css/bootstrap-formhelpers.min.css') }}"
+          xmlns="http://www.w3.org/1999/html">
+{% endblock %}
+
 {% block shippings %}
+
+
+
+    <div class="form">
+        {{ form_start(shippingForm) }}
+        <div class="row">
+                <div class="col-xs-3">
+                <div class="form-group">
+                    {{ form_label(shippingForm.shipping_select) }}
+                    <div id="shipping-company-error" class="form-error"></div>
+                    {{ form_widget(shippingForm.shipping_select, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="form-group">
+                    {{ form_label(shippingForm.title) }}
+                    <div id="shipping-company-error" class="form-error"></div>
+                    {{ form_widget(shippingForm.title, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(shippingForm.company) }}
+                    <div id="shipping-company-error" class="form-error"></div>
+                    {{ form_widget(shippingForm.company, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(shippingForm.storageNum) }}
+                    <div id="shipping-storagenum-error" class="form-error"></div>
+                    {{ form_widget(shippingForm.storageNum, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(shippingForm.city) }}
+                    <div id="shipping-city-error" class="form-error"></div>
+                    {{ form_widget(shippingForm.city, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="form-group">
+                    {{ form_label(shippingForm.storageAddress) }}
+                    <div id="shipping-storageaddress-error" class="form-error"></div>
+                    {{ form_widget(shippingForm.storageAddress, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(shippingForm.clientFio) }}
+                    <div id="shipping-clientfio-error" class="form-error"></div>
+                    {{ form_widget(shippingForm.clientFio, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(shippingForm.clientTel) }}
+                    <div id="shipping-clienttel-error" class="form-error"></div>
+                    {{ form_widget(shippingForm.clientTel, {'attr':{
+                        'class': 'form-control bfh-phone',
+                        'data-format': '+380 (dd) ddd-dd-dd'
+                    }}) }}
+                </div>
+                <div class="col-xs-3 col-xs-offset-1">
+                    {{  form_row(shippingForm.delete, {'attr': {'class': 'button'}})}}
+                </div>
+                <div class="col-xs-3">
+                    {{ form_widget(shippingForm.save, {'attr': {'class': 'button'}}) }}
+                </div>
+            </div>
+        </div>
+
+        {{ form_rest(shippingForm) }}
+    </div>
+{% endblock %}
+
+{% block js %}
+    {{ parent() }}
+    <script src="{{ asset("js/Checkout/formHandler.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("js/bootstrap-formhelpers.min.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("js/bootstrap-formhelpers-phone.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("js/Cabinet/Shipping.js") }}" type="text/javascript"></script>
 {% endblock %}
