Some small reworks and template cleaning.

--- a/app/Resources/views/Cart/cart.html.twig
+++ b/app/Resources/views/Cart/cart.html.twig
@@ -51,8 +51,8 @@
                             <div class="col-md-4 col-md-offset-8">
                                 <div class="amount-totals">
                                     <p class="total"><span></span></p>
-                                    <p class="total">Grandtotal <span>{{ cart.getTotal }}</span></p>
-                                    <button class="button" type="button"><span>Procced to checkout</span></button>
+                                    <p class="total">Grandtotal: <span>{{ cart.getTotal()~' '~currency.getName }}</span></p>
+                                    <button class="button" type="button" onclick="location.href='{{ path("app_checkout_index") }}';"><span>Procced to checkout</span></button>
                                     <div class="clearfix"></div>
                                     <p class="floatright">Checkout with multiples address</p>
                                 </div>
