--- a/app/Resources/views/User/CabinetBase.html.twig
+++ b/app/Resources/views/User/CabinetBase.html.twig
@@ -11,7 +11,7 @@
                         <div class="wishlist-left-sidebar">
                             <ul>
                                 <li><a href="{{ path('app_usercabinet_cabinet_showwishlist') }}">My Wishlist</a></li>
-                                <li><a href="">My Cart</a></li>
+                                <li><a href="{{ path('app_cart_showcart') }}">My Cart</a></li>
                                 <li><a href="{{ path('app_usercabinet_cabinet_showshippings') }}">My Shipping Profiles</a></li>
                             </ul>
                         </div>
