Installed the captcha bundle and added captcha to the registration form.

--- a/app/Resources/views/Products/products.html.twig
+++ b/app/Resources/views/Products/products.html.twig
@@ -196,6 +196,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="modal-product">
+                            <span hidden class="product-id"></span>
                             <div class="product-images">
                                 <div class="main-image images">
                                     <img alt="" src="img/product/quick-view.jpg">
@@ -208,9 +209,7 @@
                                 </div>
                                 <a href="product-details.html" class="see-all">See all features</a>
                                 <div class="quick-add-to-cart">
-                                    <form method="post" class="cart">
-                                        <button class="single_add_to_cart_button" type="submit">Add to cart</button>
-                                    </form>
+                                    <button class="single_add_to_cart_button add-to-cart" type="button">Add to cart</button>
                                 </div>
                                 <div class="quick-desc">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec est tristique auctor. Donec non est at libero vulputate rutrum. Morbi ornare lectus quis justo gravida semper. Nulla tellus mi, vulputate adipiscing cursus eu, suscipit id nulla.
