--- a/app/Resources/views/Security/registration.html.twig
+++ b/app/Resources/views/Security/registration.html.twig
@@ -31,6 +31,13 @@
                                     {{ form_errors(regForm.plainPassword.second) }}
                                 </div>
                             </div>
+                            <div class="form-group">
+                                {{ form_label(regForm.captcha) }}<span>*</span>
+                                {{ form_widget(regForm.captcha) }}
+                                <div class="form-error">
+                                    {{ form_errors(regForm.captcha) }}
+                                </div>
+                            </div>
                             <button type="submit" class="button"><span>Submit</span></button>
                             {{ form_rest(regForm) }}
                         </div>
